// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colon prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__title ghb-field__label"><span>Label:</span></div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__title ghb-field__label">Custom Label:</div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`error-message-align prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
      <div class="ghb-field__error-message ghb-field__error-message--right">Error</div>
    </div>
  </div>
</form>
`;

exports[`input-align prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control ghb-field__control--right"></div>
    </div>
  </div>
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
      <div class="ghb-field__body">
        <div class="ghb-field__control ghb-field__control--right ghb-field__control--custom">
          <div></div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`label-align prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field ghb-field--label-right">
    <div class="ghb-cell__title ghb-field__label ghb-field__label--right"><span>Label</span></div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
  <div class="ghb-cell ghb-field ghb-field--label-center">
    <div class="ghb-cell__title ghb-field__label ghb-field__label--center"><span>Label</span></div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`label-width prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__title ghb-field__label" style="width: 5rem;"><span>Label</span></div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__title ghb-field__label" style="width: 10vw;"><span>Label</span></div>
    <div class="ghb-cell__value ghb-field__value">
      <div class="ghb-field__body"><input type="text" class="ghb-field__control"></div>
    </div>
  </div>
</form>
`;

exports[`validate-first prop 1`] = `
<form class="ghb-form">
  <div class="ghb-cell ghb-field ghb-field--error">
    <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
      <div class="ghb-field__body"><input type="text" name="A" class="ghb-field__control"></div>
      <div class="ghb-field__error-message">A failed</div>
    </div>
  </div>
  <div class="ghb-cell ghb-field">
    <div class="ghb-cell__value ghb-cell__value--alone ghb-field__value">
      <div class="ghb-field__body"><input type="text" name="B" class="ghb-field__control"></div>
    </div>
  </div> <button type="submit" class="ghb-button ghb-button--default ghb-button--normal">
    <div class="ghb-button__content"></div>
  </button>
</form>
`;
